--- a/app/src/main/res/drawable/friend_list_border.xml
+++ b/app/src/main/res/drawable/friend_list_border.xml
@@ -6,4 +6,6 @@
     <stroke
         android:width="1dp"
         android:color="@color/light_gray" />
+    <solid
+        android:color="@color/white"/>
 </shape>
