--- a/app/src/main/res/layout/item_friends.xml
+++ b/app/src/main/res/layout/item_friends.xml
@@ -30,6 +30,7 @@
         app:layout_constraintTop_toBottomOf="@id/username_tv" />
 
     <androidx.appcompat.widget.AppCompatImageView
+        android:id="@+id/send_record_iv"
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:layout_marginEnd="5dp"
