--- a/app/src/main/res/layout/dialog_send_alarm.xml
+++ b/app/src/main/res/layout/dialog_send_alarm.xml
@@ -78,6 +78,7 @@
             android:paddingStart="10dp"
             android:textColor="@color/black"
             android:textSize="15sp"
+            android:inputType="text"
             app:layout_constraintBottom_toBottomOf="@id/title"
             app:layout_constraintStart_toEndOf="@id/title"
             app:layout_constraintTop_toTopOf="@id/title" />
